addedd sidebar to profilepage